# InspyredChat

./: .gitignore  pyproject.toml
inspyred_chat/client/: __init__.py
inspyred_chat/client/commands/: __init__.py
inspyred_chat/server/: __init__.py  errors.py  info.py  run.py
inspyred_chat/server/cli/: __init__.py
inspyred_chat/server/clients/: __init__.py
inspyred_chat/server/config/: __init__.py  errors.py  example_config.ini
inspyred_chat/server/logger/: __init__.py
